# Falcon-Perception

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: publish.yml
agentic_perception/: README.md  app_state.py  fp_client.py  orchestrator.py  requirements.txt  server.py
agentic_perception/static/: index.html
demo/: gpu_worker_paged.py  ocr.ipynb  ocr_benchmark.py  ocr_single.py  ocr_single_mlx.py  perception.ipynb  perception_agent.ipynb  perception_benchmark.py  perception_ov_mot.ipynb  perception_single.py  perception_single_mlx.py  streamlit_app.py
demo/agent/: __init__.py  agent_loop.py  fp_tools.py  viz.py  vlm_client.py
demo/agent/prompts/: system_prompt.txt
eval/: README.md  metrics.py  pbench.py
falcon_perception/: __init__.py  __main__.py  anyup.py  attention.py  aux_output.py  batch_inference.py  data.py  kv_cache.py  model.py  paged_attention.py  paged_inference.py  paged_ocr_inference.py  rope.py  sampling.py  visualization_utils.py
falcon_perception/mlx/: __init__.py  anyup.py  attention.py  batch_inference.py  convert.py  kv_cache.py  model.py  rope.py  sampling.py
falcon_perception/server/: README.md  __init__.py  __main__.py  app.py  config.py  engine_worker.py  mask_combiner.py  mask_smoother.py  schemas.py
